# cproj_generator

./: CMakeLists.txt  README.md
src/: main.c
